--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-use": "^17.4.2",
+    "react-waypoint": "^10.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
